kompose-w-kong/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: booking
  name: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: booking
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: booking
    spec:
      containers:
        - env:
            - name: BOOKING_DB_URL
              value: mongodb+srv://Booking:booking@cluster0.cljlebi.mongodb.net/?retryWrites=true&w=majority
            - name: PYTHONUNBUFFERED
              value: "1"
          image: nickyex2/booking
          imagePullPolicy: Always
          name: booking
          ports:
            - containerPort: 5003
          resources: {}
      restartPolicy: Always
status: {}
