kompose-w-kong/cancel-booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: cancel-booking
  name: cancel-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cancel-booking
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: cancel-booking
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: booking_url
              value: http://10.24.5.155:5003/booking
            - name: catalog_url
              value: http://10.24.0.137:5002/catalog
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
          image: nickyex2/cancel-booking
          imagePullPolicy: Always
          name: cancel-booking
          ports:
            - containerPort: 5005
          resources: {}
      restartPolicy: Always
status: {}
