kompose-w-kong/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: catalog
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: catalog
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: catalog
    spec:
      containers:
        - env:
            - name: CATALOG_DB_URL
              value: mongodb+srv://Catalog:catalog@cluster0.cljlebi.mongodb.net/?retryWrites=true&w=majority
            - name: GOOGLE_API_KEY
              value: AIzaSyA6ju8_1Q2zuf3DomUOFVplprJHuKpJHtw
            - name: PYTHONUNBUFFERED
              value: "1"
          image: nickyex2/catalog
          imagePullPolicy: Always
          name: catalog
          ports:
            - containerPort: 5002
          resources: {}
      restartPolicy: Always
status: {}
