kompose-w-kong/error-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: error
  name: error
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: error
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: error
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
          image: nickyex2/error
          imagePullPolicy: Always
          name: error
          resources: {}
      restartPolicy: Always
status: {}
