kompose-w-kong/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: kong
    spec:
      containers:
        - env:
            - name: KONG_ADMIN_LISTEN
              value: 0.0.0.0:8001
            - name: KONG_DATABASE
              value: postgres
            - name: KONG_PG_HOST
              value: 10.24.7.30
            - name: KONG_PG_PASSWORD
              value: password
            - name: KONG_PG_USER
              value: kong
            - name: KONG_PROXY_LISTEN
              value: 0.0.0.0:8000
          image: kong:2.0.4
          name: kong
          ports:
            - containerPort: 8000
            - containerPort: 8001
            - containerPort: 8443
            - containerPort: 8444
          resources: {}
      restartPolicy: Always
status: {}
