kompose-w-kong/kong-migration-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/greentable-kong-net: "true"
    io.kompose.service: kong-migration
  name: kong-migration
spec:
  containers:
    - args:
        - kong
        - migrations
        - bootstrap
      image: kong:2.0.4
      name: kong-migration
      resources: {}
  restartPolicy: OnFailure
status: {}
