kompose-w-kong/konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: konga
  name: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: konga
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: konga
    spec:
      containers:
        - env:
            - name: DB_ADAPTER
              value: postgres
            - name: DB_DATABASE
              value: konga_db
            - name: DB_HOST
              value: 10.24.7.30
            - name: DB_PASSWORD
              value: password
            - name: DB_USER
              value: kong
          image: pantsel/konga
          name: konga
          ports:
            - containerPort: 1337
          resources: {}
          volumeMounts:
            - mountPath: /app/kongadata
              name: kongadata
      restartPolicy: Always
      volumes:
        - name: kongadata
          persistentVolumeClaim:
            claimName: kongadata
status: {}
