kompose-w-kong/make-payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: make-payment
  name: make-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: make-payment
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: make-payment
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: booking_url
              value: http://10.24.5.155:5003/booking
            - name: customer_url
              value: http://10.24.3.249:5001/customer
            - name: payment_url
              value: http://10.24.14.14:5004/payment
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
          image: nickyex2/make-payment
          imagePullPolicy: Always
          name: make-payment
          ports:
            - containerPort: 5007
          resources: {}
      restartPolicy: Always
status: {}
