kompose-w-kong/notify-customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: notify-customer
  name: notify-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notify-customer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: notify-customer
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
            - name: waitlist_url
              value: http://10.24.12.191:5010/waitlist
          image: nickyex2/notify-customer:latest
          name: notify-customer
          resources: {}
      restartPolicy: Always
status: {}
