kompose-w-kong/telegram-send-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: telegram-send-api
  name: telegram-send-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: telegram-send-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: telegram-send-api
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: TELEGRAM_API_HASH
              value: f6b5db22bd5117cab0876064ca067000
            - name: TELEGRAM_API_ID
              value: "20480107"
            - name: TELEGRAM_API_SESSION
              value: s3ndm3@n0tif1cationf0rt3l3gr@m
          image: nickyex2/telegram-send-api
          imagePullPolicy: Always
          name: telegram-send-api
          ports:
            - containerPort: 5015
          resources: {}
      restartPolicy: Always
status: {}
