kompose-w-kong/twilio-sendgrid-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: twilio-sendgrid-api
  name: twilio-sendgrid-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: twilio-sendgrid-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-kong-net: "true"
        io.kompose.service: twilio-sendgrid-api
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: SENDGRID_API_KEY
              value: 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
          image: nickyex2/twilio-sendgrid-api
          imagePullPolicy: Always
          name: twilio-sendgrid-api
          ports:
            - containerPort: 5014
          resources: {}
      restartPolicy: Always
status: {}
