kompose-w-kong/place-booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: place-booking
  name: place-booking
spec:
  ports:
    - name: "5006"
      port: 5006
      targetPort: 5006
  selector:
    io.kompose.service: place-booking
status:
  loadBalancer: {}
