kompose-w-kong/stripe-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: stripe-api
  name: stripe-api
spec:
  ports:
    - name: "5016"
      port: 5016
      targetPort: 5016
  selector:
    io.kompose.service: stripe-api
status:
  loadBalancer: {}
