kompose-w-kong/twilio-sendgrid-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: twilio-sendgrid-api
  name: twilio-sendgrid-api
spec:
  ports:
    - name: "5014"
      port: 5014
      targetPort: 5014
  selector:
    io.kompose.service: twilio-sendgrid-api
status:
  loadBalancer: {}
