kompose-w-kong/waitlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved-w-kong.yml -o kompose-w-kong
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: waitlist
  name: waitlist
spec:
  ports:
    - name: "5010"
      port: 5010
      targetPort: 5010
  selector:
    io.kompose.service: waitlist
status:
  loadBalancer: {}
